WIP on getting workout and exercise screens working with a real program

--- a/liftwell/Base.lproj/Main.storyboard
+++ b/liftwell/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -76,6 +77,99 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
+        </scene>
+        <!--Workout Controller-->
+        <scene sceneID="LY1-NO-Ahk">
+            <objects>
+                <viewController storyboardIdentifier="WorkoutID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="c0G-8H-tM0" customClass="WorkoutController" customModule="liftwell" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bhN-un-BPJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breadcrumb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GO9-P3-HPY">
+                                <rect key="frame" x="150.5" y="20" width="74.5" height="16"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dtw-4V-yA3">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="sDH-BX-5eB">
+                                        <barButtonItem key="leftBarButtonItem" title="Done" id="8UU-PJ-1Eg">
+                                            <connections>
+                                                <action selector="donePressed:" destination="c0G-8H-tM0" id="AR9-YO-xnx"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <rightBarButtonItems>
+                                            <barButtonItem title="Options" id="l8t-K9-pgm">
+                                                <connections>
+                                                    <action selector="optionsPressed:" destination="c0G-8H-tM0" id="gMc-1U-Ov0"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem title="Skip" id="li7-PW-Eii">
+                                                <connections>
+                                                    <action selector="skipPressed:" destination="c0G-8H-tM0" id="3zG-zc-KkL"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </rightBarButtonItems>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4kl-UO-h8K">
+                                <rect key="frame" x="0.0" y="46" width="375" height="577"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="WorkoutCellID" textLabel="TFb-Jj-3LK" detailTextLabel="xsf-A5-Tw6" style="IBUITableViewCellStyleSubtitle" id="HXa-dP-okq">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HXa-dP-okq" id="BC2-zt-njz">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TFb-Jj-3LK">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xsf-A5-Tw6">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dtw-4V-yA3" firstAttribute="trailing" secondItem="gCj-U2-rbv" secondAttribute="trailing" id="4PY-Kw-VaY"/>
+                            <constraint firstItem="4kl-UO-h8K" firstAttribute="leading" secondItem="gCj-U2-rbv" secondAttribute="leading" id="MHj-eF-uSV"/>
+                            <constraint firstItem="GO9-P3-HPY" firstAttribute="top" secondItem="gCj-U2-rbv" secondAttribute="top" id="T6T-tK-fXP"/>
+                            <constraint firstItem="dtw-4V-yA3" firstAttribute="leading" secondItem="gCj-U2-rbv" secondAttribute="leading" id="T82-Dh-8JS"/>
+                            <constraint firstItem="dtw-4V-yA3" firstAttribute="bottom" secondItem="gCj-U2-rbv" secondAttribute="bottom" id="Z6O-ea-ddi"/>
+                            <constraint firstItem="4kl-UO-h8K" firstAttribute="trailing" secondItem="gCj-U2-rbv" secondAttribute="trailing" id="bhz-t7-SBJ"/>
+                            <constraint firstItem="GO9-P3-HPY" firstAttribute="centerX" secondItem="bhN-un-BPJ" secondAttribute="centerX" id="fkb-Ro-xjf"/>
+                            <constraint firstItem="dtw-4V-yA3" firstAttribute="top" secondItem="4kl-UO-h8K" secondAttribute="bottom" id="jA4-Ai-ehW"/>
+                            <constraint firstItem="4kl-UO-h8K" firstAttribute="top" secondItem="GO9-P3-HPY" secondAttribute="bottom" constant="10" id="vlp-0F-W6Z"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gCj-U2-rbv"/>
+                    </view>
+                    <connections>
+                        <outlet property="breadcrumbLabel" destination="GO9-P3-HPY" id="C74-Jf-NOx"/>
+                        <outlet property="optionsButton" destination="l8t-K9-pgm" id="xFg-s8-dfh"/>
+                        <outlet property="tableView" destination="4kl-UO-h8K" id="SMZ-mC-kq6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HNS-Dv-PHc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1408.8" y="-323.38830584707648"/>
         </scene>
         <!--Programs-->
         <scene sceneID="wg7-f3-ORb">
