--- a/liftwell/Base.lproj/Main.storyboard
+++ b/liftwell/Base.lproj/Main.storyboard
@@ -369,6 +369,165 @@
             </objects>
             <point key="canvasLocation" x="750" y="360"/>
         </scene>
+        <!--Reps Option Controller-->
+        <scene sceneID="sol-FP-t1k">
+            <objects>
+                <viewController storyboardIdentifier="RepsOptionsID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nST-Ih-QKK" customClass="RepsOptionController" customModule="liftwell" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ydK-zz-q2m">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iqj-rA-bE8">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="K3h-rb-4ek">
+                                        <barButtonItem key="leftBarButtonItem" title="Done" id="NdJ-Rd-AtL">
+                                            <connections>
+                                                <action selector="donePressed:" destination="nST-Ih-QKK" id="m7c-P9-pKG"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="Apparatus" id="f7T-9i-u0D">
+                                            <connections>
+                                                <action selector="apparatusPressed:" destination="nST-Ih-QKK" id="UcN-10-spo"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breadcrumb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHr-H4-CEi">
+                                <rect key="frame" x="150.5" y="20" width="74.5" height="16"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rest:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAc-RU-UNX">
+                                <rect key="frame" x="21" y="80.5" width="59" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mkq-52-chI">
+                                <rect key="frame" x="21" y="140.5" width="59" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reps:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WWR-GR-2Hj">
+                                <rect key="frame" x="21" y="200.5" width="59" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gvU-c7-oJV">
+                                <rect key="frame" x="100" y="76" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Mrl-e3-E4h"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" spellCheckingType="no" keyboardType="numbersAndPunctuation" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kJM-YB-9rx">
+                                <rect key="frame" x="100" y="136" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="uY8-Sv-GJ1"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r6z-hx-VsS">
+                                <rect key="frame" x="100" y="196" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="QS2-bh-Bjb"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sMS-Cn-NQe">
+                                <rect key="frame" x="100" y="256" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="dyk-gU-yRZ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3l-6h-ccw">
+                                <rect key="frame" x="230" y="136" width="140" height="30"/>
+                                <state key="normal" title="Adjust ^"/>
+                                <connections>
+                                    <action selector="adjustPressed:" destination="nST-Ih-QKK" eventType="touchUpInside" id="fjw-kl-aGr"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cycle:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCg-Zn-Cbg">
+                                <rect key="frame" x="21" y="260.5" width="59" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="gvU-c7-oJV" firstAttribute="top" secondItem="DHr-H4-CEi" secondAttribute="bottom" constant="40" id="3d0-LP-LYL"/>
+                            <constraint firstItem="r6z-hx-VsS" firstAttribute="leading" secondItem="gvU-c7-oJV" secondAttribute="leading" id="5ha-C7-5UQ"/>
+                            <constraint firstItem="r6z-hx-VsS" firstAttribute="centerY" secondItem="WWR-GR-2Hj" secondAttribute="centerY" id="8lO-VD-JSZ"/>
+                            <constraint firstItem="WWR-GR-2Hj" firstAttribute="leading" secondItem="oAc-RU-UNX" secondAttribute="leading" id="A9U-XC-oAs"/>
+                            <constraint firstItem="Mkq-52-chI" firstAttribute="trailing" secondItem="oAc-RU-UNX" secondAttribute="trailing" id="IYH-AJ-KH5"/>
+                            <constraint firstItem="kJM-YB-9rx" firstAttribute="centerY" secondItem="Mkq-52-chI" secondAttribute="centerY" id="L2i-yB-d5o"/>
+                            <constraint firstItem="sMS-Cn-NQe" firstAttribute="top" secondItem="r6z-hx-VsS" secondAttribute="bottom" constant="30" id="LHq-jm-CeZ"/>
+                            <constraint firstItem="sMS-Cn-NQe" firstAttribute="leading" secondItem="gvU-c7-oJV" secondAttribute="leading" id="Lfc-9A-dBC"/>
+                            <constraint firstItem="DHr-H4-CEi" firstAttribute="top" secondItem="KEb-8r-kRf" secondAttribute="top" id="M87-L3-QnZ"/>
+                            <constraint firstItem="iqj-rA-bE8" firstAttribute="trailing" secondItem="KEb-8r-kRf" secondAttribute="trailing" id="N8X-6s-cqw"/>
+                            <constraint firstItem="kJM-YB-9rx" firstAttribute="top" secondItem="gvU-c7-oJV" secondAttribute="bottom" constant="30" id="PEt-0L-Qlq"/>
+                            <constraint firstItem="KEb-8r-kRf" firstAttribute="trailing" secondItem="o3l-6h-ccw" secondAttribute="trailing" constant="5" id="PSC-CS-9vk"/>
+                            <constraint firstItem="o3l-6h-ccw" firstAttribute="centerY" secondItem="kJM-YB-9rx" secondAttribute="centerY" id="Seh-rk-bIp"/>
+                            <constraint firstItem="Mkq-52-chI" firstAttribute="leading" secondItem="oAc-RU-UNX" secondAttribute="leading" id="Uuf-py-m41"/>
+                            <constraint firstItem="oCg-Zn-Cbg" firstAttribute="leading" secondItem="oAc-RU-UNX" secondAttribute="leading" id="Weg-Px-VWP"/>
+                            <constraint firstItem="r6z-hx-VsS" firstAttribute="top" secondItem="kJM-YB-9rx" secondAttribute="bottom" constant="30" id="Xvb-7J-0CY"/>
+                            <constraint firstItem="DHr-H4-CEi" firstAttribute="centerX" secondItem="ydK-zz-q2m" secondAttribute="centerX" id="Zdl-BF-zEl"/>
+                            <constraint firstItem="oAc-RU-UNX" firstAttribute="leading" secondItem="ydK-zz-q2m" secondAttribute="leadingMargin" constant="5" id="ccP-ve-qJh"/>
+                            <constraint firstItem="kJM-YB-9rx" firstAttribute="leading" secondItem="gvU-c7-oJV" secondAttribute="leading" id="dTL-lE-256"/>
+                            <constraint firstItem="gvU-c7-oJV" firstAttribute="centerY" secondItem="oAc-RU-UNX" secondAttribute="centerY" id="hzS-S9-vKc"/>
+                            <constraint firstItem="sMS-Cn-NQe" firstAttribute="centerY" secondItem="oCg-Zn-Cbg" secondAttribute="centerY" id="m3F-Ah-74H"/>
+                            <constraint firstItem="iqj-rA-bE8" firstAttribute="bottom" secondItem="KEb-8r-kRf" secondAttribute="bottom" id="n6B-qt-udp"/>
+                            <constraint firstItem="WWR-GR-2Hj" firstAttribute="trailing" secondItem="oAc-RU-UNX" secondAttribute="trailing" id="nSU-aH-lGp"/>
+                            <constraint firstItem="oCg-Zn-Cbg" firstAttribute="trailing" secondItem="oAc-RU-UNX" secondAttribute="trailing" id="nUo-l0-CmU"/>
+                            <constraint firstItem="iqj-rA-bE8" firstAttribute="leading" secondItem="KEb-8r-kRf" secondAttribute="leading" id="w8o-Oo-bW8"/>
+                            <constraint firstItem="kJM-YB-9rx" firstAttribute="leading" secondItem="Mkq-52-chI" secondAttribute="trailing" constant="20" id="xEm-oi-gVE"/>
+                            <constraint firstItem="o3l-6h-ccw" firstAttribute="leading" secondItem="kJM-YB-9rx" secondAttribute="trailing" constant="30" id="xa4-VU-dMP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="KEb-8r-kRf"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Umq-9B-bvf" appends="YES" id="sOR-3d-bTW"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="adjustButton" destination="o3l-6h-ccw" id="QGm-iE-4Dl"/>
+                        <outlet property="apparatusButton" destination="f7T-9i-u0D" id="nqQ-5T-sj5"/>
+                        <outlet property="breadcrumbLabel" destination="DHr-H4-CEi" id="a1T-VL-tqK"/>
+                        <outlet property="cycleLabel" destination="oCg-Zn-Cbg" id="pzl-VK-M3A"/>
+                        <outlet property="cycleTextbox" destination="sMS-Cn-NQe" id="wy8-Af-ueW"/>
+                        <outlet property="repsLabel" destination="WWR-GR-2Hj" id="12M-gV-Fvx"/>
+                        <outlet property="repsTextbox" destination="r6z-hx-VsS" id="U3P-af-M5o"/>
+                        <outlet property="restTextbox" destination="gvU-c7-oJV" id="aom-oV-G3k"/>
+                        <outlet property="weightTextbox" destination="kJM-YB-9rx" id="Rwf-iO-2gv"/>
+                        <segue destination="z0k-Mg-LhC" kind="unwind" identifier="unwindToRepsOptionsID" unwindAction="unwindToRepsOptions:" id="Tgk-PI-lQz"/>
+                        <segue destination="z0k-Mg-LhC" kind="unwind" identifier="unwindToExerciseID" unwindAction="unwindToExercise:" id="O7B-Wz-YC0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F72-Bp-2sp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="z0k-Mg-LhC" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="Umq-9B-bvf">
+                    <connections>
+                        <action selector="viewTapped:" destination="nST-Ih-QKK" id="7do-Xf-v9g"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1412" y="368"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
             <objects>
